--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,52 +17,128 @@ layout: home
     </header>
     {% if page.image %}
     <div class="c-article__image o-opacity" style="background-image: url( {{"/images/" | prepend: site.baseurl | append : page.image}} )"></div>
-    {% else %}
-    {% endif %}
-    <div class="c-wrap-content">
-      <header class="c-article__header">
-        <h1 class="c-article__title">{{page.title}}</h1>
-        <div class="c-article__date">
-          <span>{{page.date | date: '%Y, %b %d'}}</span>
-        </div>
-      </header>
-      {{page.content | markdownify}}
-      <div class="c-article__footer u-clearfix">
-        <div class="c-article__tag">
-          {% for tag in page.tags %}
-          <a href="{{site.baseurl}}/tags#{{tag}}">&#35; {{ tag }}</a>
-          {% endfor %}
-        </div>
-        <div class="c-article__share">
-          <a href="https://twitter.com/intent/tweet?text={{ page.title | uri_escape }}&url={{ site.url }}{{ page.url }}" title="Share
-          on Twitter" rel="nofollow" target="_blank"><div data-icon='ei-sc-twitter' data-size='s'></div></a>
-          <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" rel="nofollow" target="_blank"><div data-icon='ei-sc-facebook' data-size='s'></div></a>
-          <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google+" rel="nofollow" target="_blank"><div data-icon='ei-sc-google-plus' data-size='s'></div></a>
-        </div>
+  {% else %}
+  {% endif %}
+  <div class="c-wrap-content">
+    <header class="c-article__header">
+      <h1 class="c-article__title">{{page.title}}</h1>
+      <div class="c-article__date">
+        <span>{{page.date | date: '%b %d, %Y'}}</span>
       </div>
-      {% include newsletter.html %}
-      <div class="c-recent-post">
-        <h4 class="c-recent__title">You might also enjoy</h4>
-        <div class="c-recent__box">
-        {% for post in site.related_posts limit:4 %}
-        {% if post.image %}
-          <div class="c-recent__item">
-            <a class="c-recent__image" href="{{ post.url }}" style="background-image: url( {{"/images/" | prepend: site.baseurl | append: post.image}})"></a>
-            <div class="c-recent__footer">
-              <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-              <div class="c-recent__date">
-                <time datetime="{{ post.date | date_to_xmlschema }}">{{post.date | date: "%B %-d, %Y"}}</time>
-              </div>
-            </div>
-          </div>
-        {% else %}
+    </header>
+    {{page.content | markdownify}}
+    <div class="c-article__footer u-clearfix">
+      <div class="c-article__tag">
+        {% for tag in page.tags %}
+        <a href="{{site.baseurl}}/tags#{{tag}}">&#35; {{ tag }}</a>
+        {% endfor %}
+      </div>
+      <div class="c-article__share">
+        <a href="https://twitter.com/intent/tweet?text={{ page.title | uri_escape }}&url={{ site.url }}{{ page.url }}" title="Share
+          on Twitter" rel="nofollow" target="_blank"><div data-icon='ei-sc-twitter' data-size='s'></div></a>
+        <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" rel="nofollow" target="_blank"><div data-icon='ei-sc-facebook' data-size='s'></div></a>
+      </div>
+    </div>
+    {% if site.newsletter %}
+    {% include newsletter.html %}
+    {% endif %}
+    <div class="c-recent-post">
+      <h4 class="c-recent__title">You might also enjoy</h4>
+      <div class="c-recent__box">
+        {% assign maxRelated = 4 %}
+        {% assign minCommonTags =  1 %}
+        {% assign maxRelatedCounter = 0 %}
+
+        {% for post in site.posts %}
+        {% assign sameTagCount = 0 %}
+        {% assign commonTags = '' %}
+
+        {% for tag in post.tags %}
+        {% if post.url != page.url %}
+        {% if page.tags contains tag %}
+        {% assign sameTagCount = sameTagCount | plus: 1 %}
+        {% capture tagmarkup %} <span class="label label-default">{{ tag }}</span> {% endcapture %}
+        {% assign commonTags = commonTags | append: tagmarkup %}
+        {% endif %}
         {% endif %}
         {% endfor %}
+
+        {% if sameTagCount >= minCommonTags %}
+
+        {% if post.image %}
+        <div class="c-recent__item">
+          <a class="c-recent__image" href="{{ post.url }}" style="background-image: url( {{"/images/" | prepend: site.baseurl | append: post.image}})"></a>
+          <div class="c-recent__footer">
+            <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
+            <div class="c-recent__date">
+              <time datetime="{{ post.date | date_to_xmlschema }}">{{post.date | date: "%B %-d, %Y"}}</time>
+            </div>
+          </div>
         </div>
-      </div> <!-- /.c-recent-post -->
-      {% if site.disqus-identifier %}
-        {% include disqus-comments.html %}
-      {% endif %}
-    </div> <!-- /.c-wrap-content -->
+        {% else %}
+        {% endif %}
+
+        {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+        {% if maxRelatedCounter >= maxRelated %}
+        {% break %}
+        {% endif %}
+        {% endif %}
+
+        {% endfor %}
+
+        {% comment %} If we didn't get minimum number of posts, fill in with other ones arbitrarily...{% endcomment %}
+        {% if maxRelated > maxRelatedCounter %}
+
+        {% for post in site.posts %}
+
+        {% assign first_dir = post.path | remove_first: "_posts/" | split: "/" | first %}
+        {% if first_dir != 'college' %}
+
+        {% assign sameTagCount = 0 %}
+        {% assign commonTags = '' %}
+
+        {% for tag in post.tags %}
+        {% if post.url != page.url %}
+        {% if page.tags contains tag %}
+        {% assign sameTagCount = sameTagCount | plus: 1 %}
+        {% capture tagmarkup %} <span class="label label-default">{{ tag }}</span> {% endcapture %}
+        {% assign commonTags = commonTags | append: tagmarkup %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
+
+        {% if minCommonTags > sameTagCount and post.url != page.url %}
+
+        {% if post.image %}
+        <div class="c-recent__item">
+          <a class="c-recent__image" href="{{ post.url }}" style="background-image: url( {{"/images/" | prepend: site.baseurl | append: post.image}})"></a>
+          <div class="c-recent__footer">
+            <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
+            <div class="c-recent__date">
+              <time datetime="{{ post.date | date_to_xmlschema }}">{{post.date | date: "%B %-d, %Y"}}</time>
+            </div>
+          </div>
+        </div>
+        {% else %}
+        {% endif %}
+
+        {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+        {% if maxRelatedCounter >= maxRelated %}
+        {% break %}
+        {% endif %}
+        {% endif %}
+
+        {% endif %}
+        {% endfor %}
+
+
+        {% endif %}
+
+      </div>
+    </div> <!-- /.c-recent-post -->
+    {% if site.disqus-identifier %}
+    {% include disqus-comments.html %}
+    {% endif %}
+  </div> <!-- /.c-wrap-content -->
   </div> <!-- /.c-article__content -->
 </article> <!-- /.c-article-page -->
