--- a/_layouts/category-page.html
+++ b/_layouts/category-page.html
@@ -7,16 +7,23 @@ layout: home
   <article class="c-post">
     {% if post.image %}
     <a class="c-post-thumbnail" style="background-image: url({{"/images/" | prepend: site.baseurl | append : post.image}})"
-      href="{{post.url | prepend: site.baseurl}}"></a>
+    href="{{post.url | prepend: site.baseurl}}"></a>
     {% else %} {% endif %}
     <div class="c-post-content">
       <h2 class="c-post-title">
         <a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a>
       </h2>
       <p>{{ post.content | strip_html | truncatewords: 15 }}</p>
-      <span class="c-post-date">{{post.date | date: '%Y, %b %d'}}&nbsp;&nbsp;&nbsp;—&nbsp;</span>
-      <span class="c-post-words">{% capture words %}{{ post.content | number_of_words }}{% endcapture %}{% unless words contains "-" %}{{ words | plus:
-        250 | divided_by: 250 | append: " minute read" }}{% endunless %}</span>
+      <span class="c-post-date">{{post.date | date: '%b %d, %Y'}}</span>
+      {% if post.prep-time %}
+      <span class="c-post-words">&nbsp;&nbsp;&nbsp;—&nbsp;{{post.prep-time | append: " prep time"}}</span>
+      {% endif %}
+      {% if post.cook-time %}
+      <span class="c-post-words">&nbsp;&nbsp;&nbsp;—&nbsp;{{post.cook-time | append: " cook time"}}</span>
+      {% endif %}
+      {% if post.total-time %}
+      <span class="c-post-words">&nbsp;&nbsp;&nbsp;—&nbsp;{{post.total-time | append: " total time"}}</span>
+      {% endif %}
     </div>
   </article>
   {% endfor %}
