--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
       </a>
     </div>
     <div class="c-author__info">
-      <div class="c-author__name">{{site.title}}</div>
+      <div class="c-author__name">{{site.author-name}}</div>
       <span class="c-author__job">{{site.description}}</span>
     </div>
     <div class="c-contact-menu">
